Added business objective.

--- a/prompt_III.ipynb
+++ b/prompt_III.ipynb
@@ -2055,25 +2055,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The objective is to identify what attributes enhance the success of a telemarketing campaign for selling high interest deposits on the Portuguese banking market."
+   ]
   },
   {
    "cell_type": "markdown",
