Some TLC in plotting code.

--- a/prompt_III.ipynb
+++ b/prompt_III.ipynb
@@ -809,39 +809,15 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {
-    "vscode": {
-     "languageId": "raw"
-    }
-   },
-   "source": [
-    "# Number of columns\n",
-    "num_columns = len(df.columns)\n",
-    "\n",
-    "# Set Seaborn color palette\n",
-    "palette = sns.color_palette(palette = 'Set1', n_colors = num_columns)\n",
-    "\n",
-    "# Create subplots\n",
-    "fig, axes = plt.subplots(nrows = num_columns, ncols = 1, figsize = (15, 4 * num_columns))\n",
-    "\n",
-    "# Loop through each column and create a histogram in the corresponding subplot\n",
-    "for i, column in enumerate(df.columns):\n",
-    "    sns.histplot(df[column], ax = axes[i], color = palette[i])\n",
-    "    axes[i].set_title(f'Histogram of column \"{column}\"')\n",
-    "    axes[i].set_xlabel('') # We already mention column's name in the title. \n",
-    "\n",
-    "plt.tight_layout(h_pad = 3) # Add padding between the subplots\n",
-    "plt.show()"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plot histogram of the given column.\n",
+    "# It uses Seaborn.\n",
     "def plot_column_histogram(column_name):\n",
+    "    # Create a palette to have individual colors for each column. \n",
     "    num_columns = len(df.columns)\n",
     "    column_index = df.columns.get_loc(column_name)\n",
     "    palette = sns.color_palette(palette = 'Set1', n_colors = num_columns)\n",
@@ -857,7 +833,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plot probabilities of the customer accepting the offer against the given column.\n",
+    "# It uses Seaborn.\n",
     "def plot_prob_of_success(column_name, kind = 'bar'):\n",
+    "    # Create a palette to have individual colors for each column. \n",
     "    num_columns = len(df.columns)\n",
     "    column_index = df.columns.get_loc(column_name)\n",
     "    palette = sns.color_palette(palette = 'Set1', n_colors = num_columns)\n",
