--- a/prompt_III.ipynb
+++ b/prompt_III.ipynb
@@ -62,6 +62,8 @@
     "from sklearn.preprocessing import StandardScaler, OrdinalEncoder\n",
     "from sklearn.compose import make_column_transformer\n",
     "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "from sklearn.dummy import DummyClassifier\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import GridSearchCV"
@@ -2150,24 +2152,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, stratify = y, random_state = 42)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(31514, 19)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7879, 19)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test.shape"
+   ]
   },
   {
    "cell_type": "markdown",
