Added Grid Search for best hyper-parameters.

--- a/prompt_III.ipynb
+++ b/prompt_III.ipynb
@@ -2222,7 +2222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create helper functions to automate building models and reporting their performance."
+    "#### Helper functions to automate building models and reporting their performance."
    ]
   },
   {
@@ -2234,15 +2234,26 @@
     "# Labels to display in the Confusion Matrix\n",
     "target_labels = ['no', 'yes']\n",
     "\n",
-    "# Train and validate given model. Print out results and plot Confusion Matrix.\n",
-    "def fit_and_validate(model, detailed_report = True, verbose = True):\n",
-    "    start_time = time.time()\n",
-    "\n",
+    "# Build a Pipeline with column transformer with the given model instance.\n",
+    "# Model will be tagged (in named_steps) with its own class name.\n",
+    "def build_pipeline(model):\n",
     "    model_name = model.__class__.__name__\n",
     "    pipe = Pipeline([\n",
     "        ('transformer', column_transformer),\n",
     "        (model_name, model),\n",
     "    ])\n",
+    "    return pipe\n",
+    "\n",
+    "# Train and validate given model. It will build a proper Pipeline\n",
+    "# and return it.\n",
+    "#\n",
+    "# Also print out results to the console and plot Confusion Matrix if\n",
+    "# requested.\n",
+    "def fit_and_validate(model, detailed_report = True, verbose = True):\n",
+    "    start_time = time.time()\n",
+    "\n",
+    "    model_name = model.__class__.__name__\n",
+    "    pipe = build_pipeline(model)\n",
     "    pipe.fit(X_train, y_train)\n",
     "    y_hat_train = pipe.predict(X_train)\n",
     "    y_hat_test = pipe.predict(X_test)\n",
@@ -2290,7 +2301,7 @@
      "text": [
       "Report for model: DummyClassifier\n",
       "\n",
-      "Training and Validation Time (s): 1.44\n",
+      "Training and Validation Time (s): 0.73\n",
       "Accuracy Score (Train): 0.8834168940788221\n",
       "Accuracy Score (Test): 0.8834877522528239\n"
      ]
@@ -2327,7 +2338,7 @@
      "text": [
       "Report for model: LogisticRegression\n",
       "\n",
-      "Training and Validation Time (s): 1.15\n",
+      "Training and Validation Time (s): 1.11\n",
       "Accuracy Score (Train): 0.895252903471473\n",
       "Accuracy Score (Test): 0.8999873080340145\n",
       "\n",
@@ -2480,7 +2491,7 @@
     "    LogisticRegression(random_state = 2), \n",
     "    DecisionTreeClassifier(random_state = 2), \n",
     "    KNeighborsClassifier(), \n",
-    "    SVC(random_state = 2),\n",
+    "    #SVC(random_state = 2),\n",
     "]\n",
     "\n",
     "results = []\n",
@@ -2532,25 +2543,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>LogisticRegression</th>\n",
-       "      <td>0.429956</td>\n",
+       "      <td>0.444325</td>\n",
        "      <td>0.895253</td>\n",
        "      <td>0.899987</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>SVC</th>\n",
-       "      <td>30.074258</td>\n",
-       "      <td>0.894587</td>\n",
-       "      <td>0.898845</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>KNeighborsClassifier</th>\n",
-       "      <td>0.970816</td>\n",
+       "      <td>0.974531</td>\n",
        "      <td>0.908200</td>\n",
        "      <td>0.886280</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DecisionTreeClassifier</th>\n",
-       "      <td>0.463935</td>\n",
+       "      <td>0.458235</td>\n",
        "      <td>0.994986</td>\n",
        "      <td>0.835893</td>\n",
        "    </tr>\n",
@@ -2561,10 +2566,9 @@
       "text/plain": [
        "                        Train Time  Train Score  Test Score\n",
        "Model                                                      \n",
-       "LogisticRegression        0.429956     0.895253    0.899987\n",
-       "SVC                      30.074258     0.894587    0.898845\n",
-       "KNeighborsClassifier      0.970816     0.908200    0.886280\n",
-       "DecisionTreeClassifier    0.463935     0.994986    0.835893"
+       "LogisticRegression        0.444325     0.895253    0.899987\n",
+       "KNeighborsClassifier      0.974531     0.908200    0.886280\n",
+       "DecisionTreeClassifier    0.458235     0.994986    0.835893"
       ]
      },
      "execution_count": 67,
@@ -2604,6 +2608,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# DecisionTreeClassifier model is at index 1 \n",
     "dtc_pipe = pipelines[1]\n",
     "dtc = dtc_pipe.named_steps['DecisionTreeClassifier']\n",
     "feature_importances = dtc.feature_importances_\n",
@@ -2657,24 +2662,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# New list of models to invalidate the other instances\n",
+    "models = [\n",
+    "    LogisticRegression(random_state = 2), \n",
+    "    DecisionTreeClassifier(random_state = 2), \n",
+    "    KNeighborsClassifier(), \n",
+    "    # SVC in Grid Search takes forever. Disable for now.\n",
+    "    # SVC(random_state = 2),\n",
+    "]\n",
+    "\n",
+    "# Parameter grids for each model in order as in `models` list.\n",
+    "param_grids = [\n",
+    "    {\n",
+    "        'LogisticRegression__C': [0.1, 1, 10, 100],\n",
+    "        'LogisticRegression__solver': ['liblinear'],\n",
+    "        'LogisticRegression__max_iter': [500, 1000, 2000], \n",
+    "        'LogisticRegression__penalty': ['l1', 'l2'],\n",
+    "    },\n",
+    "    {\n",
+    "        'DecisionTreeClassifier__criterion': ['gini', 'entropy'],\n",
+    "        'DecisionTreeClassifier__max_depth': [None, 10, 20, 30, 40, 50],\n",
+    "        'DecisionTreeClassifier__min_samples_split': [2, 10, 20],\n",
+    "        'DecisionTreeClassifier__min_samples_leaf': [1, 5, 10],\n",
+    "    },\n",
+    "    {\n",
+    "        'KNeighborsClassifier__n_neighbors': [3, 5, 7, 9],\n",
+    "        'KNeighborsClassifier__weights': ['uniform', 'distance'],\n",
+    "    },\n",
+    "    {\n",
+    "        'SVC__C': [0.1, 1, 10, 100],\n",
+    "        'SVC__kernel': ['linear','rbf'],\n",
+    "    }\n",
+    "]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grid Search: LogisticRegression\n",
+      "Tuning, Training and Validation Time (s): 6.62\n",
+      "Best parameters: {'LogisticRegression__C': 0.1, 'LogisticRegression__max_iter': 500, 'LogisticRegression__penalty': 'l2', 'LogisticRegression__solver': 'liblinear'}\n",
+      "Best accuracy score: 0.89566537079435\n",
+      "\n",
+      "Grid Search: DecisionTreeClassifier\n",
+      "Tuning, Training and Validation Time (s): 14.6\n",
+      "Best parameters: {'DecisionTreeClassifier__criterion': 'entropy', 'DecisionTreeClassifier__max_depth': 10, 'DecisionTreeClassifier__min_samples_leaf': 5, 'DecisionTreeClassifier__min_samples_split': 20}\n",
+      "Best accuracy score: 0.8917306106168281\n",
+      "\n",
+      "Grid Search: KNeighborsClassifier\n",
+      "Tuning, Training and Validation Time (s): 3.87\n",
+      "Best parameters: {'KNeighborsClassifier__n_neighbors': 9, 'KNeighborsClassifier__weights': 'uniform'}\n",
+      "Best accuracy score: 0.8881131294468039\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Perform Grid Search with Cross-Validation\n",
+    "results = []\n",
+    "\n",
+    "for i, model in enumerate(models):\n",
+    "    start_time = time.time()\n",
+    "\n",
+    "    model_name = model.__class__.__name__\n",
+    "    print('Grid Search: ' + model_name)\n",
+    "    pipe = build_pipeline(model)\n",
+    "    params = param_grids[i]\n",
+    "    grid_search = GridSearchCV(estimator = pipe, param_grid = params, cv = 5, n_jobs = -1, scoring = 'accuracy')\n",
+    "    grid_search.fit(X_train, y_train)\n",
+    "    \n",
+    "    end_time = time.time()\n",
+    "    elapsed_time = end_time - start_time\n",
+    "\n",
+    "    print('Tuning, Training and Validation Time (s): ' + str(round(elapsed_time, 2)))\n",
+    "    print('Best parameters: ' + str(grid_search.best_params_))\n",
+    "    print('Best accuracy score: ' + str(grid_search.best_score_))\n",
+    "    print()\n",
+    "    \n",
+    "    results.append((model_name, elapsed_time, grid_search.best_score_))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Train Time</th>\n",
+       "      <th>Test Score</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Model</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>LogisticRegression</th>\n",
+       "      <td>6.620073</td>\n",
+       "      <td>0.895665</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DecisionTreeClassifier</th>\n",
+       "      <td>14.602140</td>\n",
+       "      <td>0.891731</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>KNeighborsClassifier</th>\n",
+       "      <td>3.867447</td>\n",
+       "      <td>0.888113</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Train Time  Test Score\n",
+       "Model                                         \n",
+       "LogisticRegression        6.620073    0.895665\n",
+       "DecisionTreeClassifier   14.602140    0.891731\n",
+       "KNeighborsClassifier      3.867447    0.888113"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "models_df = pd.DataFrame(data = results, columns = ['Model', 'Train Time', 'Test Score']).set_index('Model').sort_values(by = 'Test Score', ascending = False)\n",
+    "models_df"
+   ]
   },
   {
    "cell_type": "code",
