--- a/prompt_III.ipynb
+++ b/prompt_III.ipynb
@@ -2301,7 +2301,7 @@
      "text": [
       "Report for model: DummyClassifier\n",
       "\n",
-      "Training and Validation Time (s): 0.73\n",
+      "Training and Validation Time (s): 1.04\n",
       "Accuracy Score (Train): 0.8834168940788221\n",
       "Accuracy Score (Test): 0.8834877522528239\n"
      ]
@@ -2338,7 +2338,7 @@
      "text": [
       "Report for model: LogisticRegression\n",
       "\n",
-      "Training and Validation Time (s): 1.11\n",
+      "Training and Validation Time (s): 0.79\n",
       "Accuracy Score (Train): 0.895252903471473\n",
       "Accuracy Score (Test): 0.8999873080340145\n",
       "\n",
@@ -2543,19 +2543,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>LogisticRegression</th>\n",
-       "      <td>0.444325</td>\n",
+       "      <td>0.413116</td>\n",
        "      <td>0.895253</td>\n",
        "      <td>0.899987</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>KNeighborsClassifier</th>\n",
-       "      <td>0.974531</td>\n",
+       "      <td>1.019058</td>\n",
        "      <td>0.908200</td>\n",
        "      <td>0.886280</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DecisionTreeClassifier</th>\n",
-       "      <td>0.458235</td>\n",
+       "      <td>0.795084</td>\n",
        "      <td>0.994986</td>\n",
        "      <td>0.835893</td>\n",
        "    </tr>\n",
@@ -2566,9 +2566,9 @@
       "text/plain": [
        "                        Train Time  Train Score  Test Score\n",
        "Model                                                      \n",
-       "LogisticRegression        0.444325     0.895253    0.899987\n",
-       "KNeighborsClassifier      0.974531     0.908200    0.886280\n",
-       "DecisionTreeClassifier    0.458235     0.994986    0.835893"
+       "LogisticRegression        0.413116     0.895253    0.899987\n",
+       "KNeighborsClassifier      1.019058     0.908200    0.886280\n",
+       "DecisionTreeClassifier    0.795084     0.994986    0.835893"
       ]
      },
      "execution_count": 67,
@@ -2599,7 +2599,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In addition let's extract Feature Importance from the Decision Tree Classifier and compare with Logistic Regression coefficients."
+    "In addition, let's extract Feature Importance from the Decision Tree Classifier and compare with Logistic Regression coefficients extracted earlier."
    ]
   },
   {
@@ -2680,7 +2680,7 @@
     "    {\n",
     "        'LogisticRegression__C': [0.1, 1, 10, 100],\n",
     "        'LogisticRegression__solver': ['liblinear'],\n",
-    "        'LogisticRegression__max_iter': [500, 1000, 2000], \n",
+    "        'LogisticRegression__max_iter': [50, 500, 1000, 2000], \n",
     "        'LogisticRegression__penalty': ['l1', 'l2'],\n",
     "    },\n",
     "    {\n",
@@ -2710,17 +2710,17 @@
      "output_type": "stream",
      "text": [
       "Grid Search: LogisticRegression\n",
-      "Tuning, Training and Validation Time (s): 6.62\n",
-      "Best parameters: {'LogisticRegression__C': 0.1, 'LogisticRegression__max_iter': 500, 'LogisticRegression__penalty': 'l2', 'LogisticRegression__solver': 'liblinear'}\n",
+      "Tuning, Training and Validation Time (s): 10.45\n",
+      "Best parameters: {'LogisticRegression__C': 0.1, 'LogisticRegression__max_iter': 50, 'LogisticRegression__penalty': 'l2', 'LogisticRegression__solver': 'liblinear'}\n",
       "Best accuracy score: 0.89566537079435\n",
       "\n",
       "Grid Search: DecisionTreeClassifier\n",
-      "Tuning, Training and Validation Time (s): 14.6\n",
+      "Tuning, Training and Validation Time (s): 14.28\n",
       "Best parameters: {'DecisionTreeClassifier__criterion': 'entropy', 'DecisionTreeClassifier__max_depth': 10, 'DecisionTreeClassifier__min_samples_leaf': 5, 'DecisionTreeClassifier__min_samples_split': 20}\n",
       "Best accuracy score: 0.8917306106168281\n",
       "\n",
       "Grid Search: KNeighborsClassifier\n",
-      "Tuning, Training and Validation Time (s): 3.87\n",
+      "Tuning, Training and Validation Time (s): 4.0\n",
       "Best parameters: {'KNeighborsClassifier__n_neighbors': 9, 'KNeighborsClassifier__weights': 'uniform'}\n",
       "Best accuracy score: 0.8881131294468039\n",
       "\n"
@@ -2790,17 +2790,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>LogisticRegression</th>\n",
-       "      <td>6.620073</td>\n",
+       "      <td>10.450999</td>\n",
        "      <td>0.895665</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DecisionTreeClassifier</th>\n",
-       "      <td>14.602140</td>\n",
+       "      <td>14.277985</td>\n",
        "      <td>0.891731</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>KNeighborsClassifier</th>\n",
-       "      <td>3.867447</td>\n",
+       "      <td>4.003600</td>\n",
        "      <td>0.888113</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2810,9 +2810,9 @@
       "text/plain": [
        "                        Train Time  Test Score\n",
        "Model                                         \n",
-       "LogisticRegression        6.620073    0.895665\n",
-       "DecisionTreeClassifier   14.602140    0.891731\n",
-       "KNeighborsClassifier      3.867447    0.888113"
+       "LogisticRegression       10.450999    0.895665\n",
+       "DecisionTreeClassifier   14.277985    0.891731\n",
+       "KNeighborsClassifier      4.003600    0.888113"
       ]
      },
      "execution_count": 72,
@@ -2826,60 +2826,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "After hyper-parameter tuning we have the same best winner -- LR. Mind, due to computational requirements, I skipped SVM Classifier tuning. \n",
+    "\n",
+    "Also, DTC's accuracy certainly improved."
+   ]
   },
   {
    "cell_type": "markdown",
